--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-	<title>Travello</title>
+	<title>PurifyNature</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Travello template project">
@@ -38,17 +38,19 @@
                                                                                 {% if user.is_authenticated %} 
                                                                                 <li>Hello, {{user.first_name}}</li>
                                                                                 <li><a href="accounts/logout">Logout</a></li>
+																				<li><a href="accounts/trashdetection">Trash Detection</a></li>
                                                                                 {% else %}
 
 
                                                                                 <li><a href="accounts/register">Register</a></li>  
                                                                                 <li><a href="accounts/login">Login</a></li>
+																			
                                                                                 {% endif %}
                                                                                  
 
 									</ul>
 								</nav>
-								<div class="header_phone ml-auto">Call us: 00-56 445 678 33</div>
+								<div class="header_phone ml-auto">Green & Clean</div>
 
 								<!-- Hamburger -->
 
@@ -92,6 +94,7 @@
 					<li><a href="#">Services</a></li>
 					<li><a href="news.html">News</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Trash Detection</a></li>
 				</ul>
 			</div>
 			<div class="menu_social">
