--- a/templates/map.html
+++ b/templates/map.html
@@ -48,4 +48,31 @@ function initMap(lat, lng) {
      var marker = new google.maps.Marker({})
 }  
   </script>
+   <head>
+<style>
+
+
+#myBttn {
+  #display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #0A7029;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBttn:hover {
+  background-color: #FFFF00;
+}
+</style>
+</head>
+<button onClick="window.location.href='https://purifynature.herokuapp.com';" id="myBttn" title="About" target="_blank">👋</button>
+
 </html>
