--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,3 @@
-{% load static %}
-{% static "images" as baseUrl %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,20 +18,29 @@ body {font-family: "Lato", sans-serif}
 <body>
 
 <!-- Navbar -->
-  
+	<!--
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
-    <!--
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="https://mainpag-3.glitch.me/#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="https://detector-pag3.glitch.me/" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DETECTOR</a>
     <a href="https://c0ntactpag3.glitch.me/" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
     
-   
-      
+    
     <a href="https://hom3-pag3.glitch.me/" class="w3-padding-large w3-hover-red w3-hide-small w3-right">LOGOUT</a>
+
+  </div>
+</div>
 -->
-  <ul class="d-flex flex-row align-items-start justify-content-start">
+	<header class="header">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<div class="header_content d-flex flex-row align-items-center justify-content-start">
+							<div class="header_content_inner d-flex flex-row align-items-end justify-content-start">
+								<div class="logo"><a href="/">PurifyNature</a></div>
+								<nav class="main_nav">
+									<ul class="d-flex flex-row align-items-start justify-content-start">
 										<li class="active"><a href="index.html">Home</a></li>
 									        <li><a href="accounts/contact">Contact</a></li>
                                                                                 {% if user.is_authenticated %} 
@@ -50,15 +57,38 @@ body {font-family: "Lato", sans-serif}
                                                                                  
 
 									</ul>
-  </div>
-</div>
+								</nav>
+								<div class="header_phone ml-auto">Green & Clean</div>
+
+								<!-- Hamburger -->
+
+								<div class="hamburger ml-auto">
+									<i class="fa fa-bars" aria-hidden="true"></i>
+								</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="header_social d-flex flex-row align-items-center justify-content-start">
+				<ul class="d-flex flex-row align-items-start justify-content-start">
+					<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+				</ul>
+			</div>
+		</header>
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
+  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
+  <a href="https://detector-pag3.glitch.me/" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">DETECTOR</a>
   <a href="https://c0ntactpag3.glitch.me/" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+  <a href="https://hom3-pag3.glitch.me/" class="w3-padding-large w3-hover-red w3-hide-small w3-right">LOGOUT</a>
 </div>
 
 <!-- Page content -->
@@ -74,30 +104,52 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">ABOUT</h2>
     
+    <p class="w3-justify">Waste management has always been a critical piece of the puzzle in protecting the environment and our health.
+    Unlike garbage companies of ancient times, where the city employed men to collect the garbage in carts and bury it, 
+    modern garbage service generally includes waste collection, transport, treatment, and proper disposal of waste materials.</p>
     <div class="w3-row w3-padding-32">
       
     </div>
   </div>
-
+  <center><img 
+ width="250" height="250"
+ src="https://cdn.glitch.global/96d11bbe-2bfe-46b4-aff8-0d5cbd3135f4/garbage%20bag%20final.jpg?v=1643534371252"
+ class="center">
+  </center> 
  <br> <br> <br>
    <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band1">
    
     
+    <p class="w3-justify"> We all create waste, but few of us think about it, we don’t have to; once it’s in the bin, it’s dealt with.
+    Often we buy new things when we don’t need to, throw away things that still work, and simply dump food because we are full. 
+    But when you consider that a hairspray can take up to 500 years to decompose, it makes you wonder if all that waste is worth it.
+    However, since many of us don’t know the facts about waste removal and recycling, we don’t think about the effects.</p>
     <div class="w3-row w3-padding-32">
       
     </div>
   </div>
 
   <br> <br> 
-  
+  <center><img 
+ width="500" height="400"
+ src="https://cdn.glitch.global/96d11bbe-2bfe-46b4-aff8-0d5cbd3135f4/istockphoto-1139651150-612x612.jpg?v=1643535928223"
+ class="center">
+  </center> 
   <br> <br>
  <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band2">
     
     
+    <p class="w3-justify"> On average a typical family will throw away around 40kg of plastic that could be recycled each year. 
+      That’s a hell of a lot of wasted plastic. 
+Over 7 million tons of food and drink are thrown away each year – it’s hard to even comprehend how much that actually is, but trust us, it’s a lot!
+Food waste from hotels, bars, and restaurants amounts to around £724 million each year due to wasted food. It is estimated that each year we generate
+3% more waste than the previous year. Considering we are supposed to be recycling more, this is pretty shocking.
 
+</p>
     <div class="w3-row w3-padding-32">
       
     </div>
