--- a/static/styles/main_styles.css
+++ b/static/styles/main_styles.css
@@ -346,7 +346,7 @@ section
 	font-weight: 400;
 	/*color: #FFFFFF;*/
 	/*background-color: rgba(0,0,0,0);*/
-	color: rgba(0,0,0,0);
+	color: #696969;
 	white-space: nowrap;
 }
 .header_phone
