--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -361,7 +361,7 @@ section
 	top: -104px;
 	width: 2px;
 	height: 0px;
-	background: #FFFFFF;
+	background: #181818;
 	content: '';
 	visibility: hidden;
 	opacity: 0;
@@ -387,7 +387,7 @@ section
 	font-family: 'Oswald', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
-	color: #FFFFFF;
+	color: #181818;
 	white-space: nowrap;
 }
 .header_phone
