--- a/templates/index.html
+++ b/templates/index.html
@@ -24,17 +24,17 @@
   <h2 fontstyle="Sans" class="w3-left w3-tag w3-green w3-round">GREEN AND CLEAN<img width="100" height="100" src="https://cdn.glitch.global/a380af09-cbfb-42a4-bfda-6cffa4db648b/1643187802148.png?v=1643187868342" class="center"></h1>
   <h2 class="w3-left w3-tag w3-pale-red w3-round"></h2>
   <a class="d-flex flex-row align-items-start justify-content-start">
-										<li class="active"><a href="/">Home</a></li>
-									        <li><a href="accounts/contact">Contact</a></li>
+										<b class="active"><a href="/">Home</a></b>
+									        <b><a href="accounts/contact">Contact</a></b>
                                                                                 {% if user.is_authenticated %} 
-                                                                                <li>Hello, {{user.first_name}}</li>
-                                                                                <li><a href="accounts/logout">Logout</a></li>
-					                                        <li><a href="accounts/trashdetection">Trash Detection</a></li>
+                                                                                <b>Hello, {{user.first_name}}</b>
+                                                                                <b><a href="accounts/logout">Logout</a></b>
+					                                        <b><a href="accounts/trashdetection">Trash Detection</a></b>
                                                                                 {% else %}
 
 
-                                                                                <li><a href="accounts/register">Register</a></li>  
-                                                                                <li><a href="accounts/login">Login</a></li>
+                                                                                <b><a href="accounts/register">Register</a></b>  
+                                                                                <b><a href="accounts/login">Login</a></b>
 																			
                                                                                 {% endif %}
                                                                                  
