--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                                                                                 {% if user.is_authenticated %} 
                                                                                 <a class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Hello, {{user.first_name}}</a>
                                                                                 <a href="accounts/logout" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Logout</a>
-					                                        <a href="accounts/trashdetection">Trash Detection</a>
+					                                        <a href="accounts/trashdetection" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Trash Detection</a>
                                                                                 {% else %}
 
 
