--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Purify Nature</title>
+    <title>PurifyNature</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -58,7 +58,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <img class="w3-image" src="https://media.istockphoto.com/photos/group-of-people-cleaning-nature-picture-id1143445679?k=20&m=1143445679&s=170667a&w=0&h=dL_rM-xH2MHCrufzfjhZgxlqLaBC1EBifw3-nIvjv-Q=" alt="Photo by Jamie Street" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
      
-      <h1 fontstyle="" class="w3-left w3-tag w3-pale-green w3-round">Purify nature</h1>
+      <h1 fontstyle="" class="w3-left w3-tag w3-pale-green w3-round">PurifyNature</h1>
     </div>
   </header>
 
