--- a/templates/index.html
+++ b/templates/index.html
@@ -131,6 +131,85 @@ function myFunction() {
   }
 }
 </script>
+<head>
+<style>
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+html {
+  scroll-behavior: smooth;
+}
+#myBtn:hover {
+  background-color: #0000FF;
+}
+</style>
+</head>	
+<button onclick="topFunction()" id="myBtn" title="Go to top">👆</button>
+<script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
 
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+
+
+<head>
+<style>
+
+
+#myBttn {
+  #display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #0A7029;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBttn:hover {
+  background-color: #FFFF00;
+}
+</style>
+</head>
+<button onClick="window.location.href='https://rohaanjohn.herokuapp.com';" id="myBttn" title="About" target="_blank">👋</button>
+
+
+
+</body>
+</html>
 </body>
 </html>
