--- a/templates/index.html
+++ b/templates/index.html
@@ -205,7 +205,7 @@ function topFunction() {
 }
 </style>
 </head>
-<button onClick="window.location.href='https://rohaanjohn.herokuapp.com';" id="myBttn" title="About" target="_blank">👋</button>
+<button onClick="window.location.href='https://abouttheteam.glitch.me';" id="myBttn" title="About" target="_blank">👋</button>
 
 
 
