--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -150,8 +150,8 @@ a {
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
-   <body>
-      <form action="trashdetection" method="post">
+   <body action="trashdetection" method="post">
+      
      {% csrf_token %} 
       <div class="container">
          <div class="wrapper">
@@ -209,7 +209,7 @@ a {
          });
       </script>
  <button type="submit" class="registerbtn">Submit</button>
-         </form>
+         
 <div>
         {% for message in messages %}
         <h3> {{message}} </h3>
