--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -158,7 +158,7 @@ hr {
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
    <body>
-      <form action="contact" method="post">
+      <form action="trashdetection" method="post">
      {% csrf_token %} 
       <div class="container">
          <div class="wrapper">
