--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -153,7 +153,7 @@ hr {
   background: linear-gradient(135deg,#3a8ffe 0%,#9658fe 100%);
 }
       </style>
-      <title>Preview Image Before Upload | CodingNepal</title>
+      <title>Preview Image Before Upload</title>
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
