--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -181,7 +181,7 @@ hr {
             </div>
          </div>
          <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
-         <input id="default-btn" type="file" name="img" required>
+         <input id="default-btn" type="file" name="img1" required>
       </div>
       <script>
          const wrapper = document.querySelector(".wrapper");
