--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -1,229 +1,21 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <style> 
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-html,body{
-  display: grid;
-  height: 100%;
-  place-items: center;
-  text-align: center;
-}
- /* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
+<html>
+<body>
 
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
+<h1>Upload Image</h1>
 
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
+<form action="trashdetection" method="post">
+   {% csrf_token %} 
+  <label for="img">Select image:</label>
+  <input type="file" id="img" name="img" accept="image/*">
+  <input type="submit">
+</form>
 
-/* Set a style for the submit button */
-.registerbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-.registerbtn:hover {
-  opacity: 1;
-}
-
-/* Add a blue text color to links */
-a {
-  color: dodgerblue;
-}
-        
-.container{
-  height: 350px;
-  width: 430px;
-  position: relative;
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-
-}
-.container .wrapper{
-  position: relative;
-  height: 300px;
-  width: 100%;
-  border-radius: 10px;
-  background: #fff;
-  border: 2px dashed #c2cdda;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-.wrapper.active{
-  border: none;
-}
-.wrapper .image{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.wrapper img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-.wrapper .icon{
-  font-size: 100px;
-  color: #9658fe;
-}
-.wrapper .text{
-  font-size: 20px;
-  font-weight: 500;
-  color: #5B5B7B;
-}
-.wrapper #cancel-btn i{
-  position: absolute;
-  font-size: 20px;
-  right: 15px;
-  top: 15px;
-  color: #9658fe;
-  cursor: pointer;
-  display: none;
-}
-.wrapper.active:hover #cancel-btn i{
-  display: block;
-}
-.wrapper #cancel-btn i:hover{
-  color: #e74c3c;
-}
-.wrapper .file-name{
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  padding: 8px 0;
-  font-size: 18px;
-  color: #fff;
-  display: none;
-  background: linear-gradient(135deg,#3a8ffe 0%,#9658fe 100%);
-}
-.wrapper.active:hover .file-name{
-  display: block;
-}
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-.container #custom-btn{
-  margin-top: 30px;
-  display: block;
-  width: 100%;
-  height: 50px;
-  border: none;
-  outline: none;
-  border-radius: 25px;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  cursor: pointer;
-  background: linear-gradient(135deg,#3a8ffe 0%,#9658fe 100%);
-}
-      </style>
-      <title>Preview Image Before Upload</title>
-      <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-   </head>
-   <body>
-      
-  
-      <div class="container">
-         <div class="wrapper">
-            <div class="image">
-               <img src="" alt="">
-            </div>
-            <div class="content">
-               <div class="icon">
-                  <i class="fas fa-cloud-upload-alt"></i>
-               </div>
-               <div class="text">
-                  No file chosen, yet!
-               </div>
-            </div>
-            <div id="cancel-btn">
-               <i class="fas fa-times"></i>
-            </div>
-            <div class="file-name">
-               File name here
-            </div>
-         </div>
-         <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
-         <input id="default-btn" type="file" name="img1" required>
-      </div>
-      <script>
-         const wrapper = document.querySelector(".wrapper");
-         const fileName = document.querySelector(".file-name");
-         const defaultBtn = document.querySelector("#default-btn");
-         const customBtn = document.querySelector("#custom-btn");
-         const cancelBtn = document.querySelector("#cancel-btn i");
-         const img = document.querySelector("img");
-         let regExp = /[0-9a-zA-Z\^\&\'\@\{\}\[\]\,\$\=\!\-\#\(\)\.\%\+\~\_ ]+$/;
-         function defaultBtnActive(){
-           defaultBtn.click();
-         }
-         defaultBtn.addEventListener("change", function(){
-           const file = this.files[0];
-           if(file){
-             const reader = new FileReader();
-             reader.onload = function(){
-               const result = reader.result;
-               img.src = result;
-               wrapper.classList.add("active");
-             }
-             cancelBtn.addEventListener("click", function(){
-               img.src = "";
-               wrapper.classList.remove("active");
-             })
-             reader.readAsDataURL(file);
-           }
-           if(this.value){
-             let valueStore = this.value.match(regExp);
-             fileName.textContent = valueStore;
-           }
-         });
-      </script>
-         <form action="trashdetection" method="post">
-            {% csrf_token %} 
- <button type="submit" class="registerbtn">Submit</button>
-    </form>      
-<div>
+ <div>
         {% for message in messages %}
         <h3> {{message}} </h3>
         {% endfor %}
  </div>
-        
-   </body>
+
+</body>
 </html>
