--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
+   <style>
+   .registerbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.registerbtn:hover {
+  opacity: 1;
+}
+</style>
 <body>
+   
 
 <h1>Upload Image</h1>
 
@@ -8,7 +25,7 @@
    {% csrf_token %} 
   <label for="img">Select image:</label>
   <input type="file" id="img" name="img" accept="image/*">
-  <input type="submit">
+  <button type="submit" class="registerbtn">Submit</button>
 </form>
 
  <div>
