--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -24,7 +24,7 @@
 <form action="trashdetection" method="post">
    {% csrf_token %} 
   <label for="img">Select image:</label>
-  <input type="file" id="img" name="img" accept="image/*">
+  <input type="image" id="img" name="img" accept="image/*">
   <button type="submit" class="registerbtn">Submit</button>
 </form>
 
