--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -1,21 +1,5 @@
 <!DOCTYPE html>
 <html>
-   <style>
-   .registerbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-.registerbtn:hover {
-  opacity: 1;
-}
-</style>
 <body>
    
 
@@ -25,7 +9,7 @@
    {% csrf_token %} 
   <label for="img">Select image:</label>
   <input type="file" id="img" name="img" accept="image/*">
-  <button type="submit" class="registerbtn">Submit</button>
+  <input type="submit">
 </form>
 
  <div>
