--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -129,7 +129,8 @@ html,body{
             </div>
          </div>
          <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
-           <input type="file" id="img" name="img" accept="image/*">     
+           <!--<input type="file" id="img" name="img" accept="image/*">-->   
+           <input id="default-btn" type="file" name="img" accept="image/*" hidden>
     <!-- <input id="default-btn" type="file" hidden> -->
       </div>
      
