--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -130,10 +130,12 @@ html,body{
                File name here
             </div>
          </div>
-         <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
-           <!--<input type="file" id="img" name="img" accept="image/*">-->   
+        <!-- <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
+           <input type="file" id="img" name="img" accept="image/*">
            <input id="default-btn" type="file" name="img" accept="image/*" hidden>
-    <!-- <input id="default-btn" type="file" hidden> -->
+     <input id="default-btn" type="file" hidden> -->
+       <label for="img">Select image:</label>
+  <input type="file" id="img" name="img" accept="image/*">
       </div>
      
       <script>
