--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -108,7 +108,7 @@ html,body{
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
  </head>   
- <form action="trashdetection" method="post" enctype="multipart/form-data">
+ 
    {% csrf_token %} 
  <div class="container">
          <div class="wrapper">
@@ -130,12 +130,9 @@ html,body{
                File name here
             </div>
          </div>
-        <!-- <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
-           <input type="file" id="img" name="img" accept="image/*">
-           <input id="default-btn" type="file" name="img" accept="image/*" hidden>
-     <input id="default-btn" type="file" hidden> -->
-       <label for="img">Select image:</label>
-  <input type="file" id="img" name="img" accept="image/*">
+        
+          <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
+          <input id="default-btn" type="file" hidden>
       </div>
      
       <script>
@@ -170,7 +167,7 @@ html,body{
            }
          });
       </script>
-   
+   <form action="trashdetection" method="post" enctype="multipart/form-data">
  <button type="submit" class="registerbtn">Submit</button>
 </form>
 <div>
