--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -1,116 +1,17 @@
 <!DOCTYPE html>
-<html>
-<style>
-      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-html,body{
-  display: grid;
-  height: 100%;
-  place-items: center;
-  text-align: center;
-}
-.container{
-  height: 350px;
-  width: 430px;
-  position: relative;
-}
-.container .wrapper{
-  position: relative;
-  height: 300px;
-  width: 100%;
-  border-radius: 10px;
-  background: #fff;
-  border: 2px dashed #c2cdda;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-.wrapper.active{
-  border: none;
-}
-.wrapper .image{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.wrapper img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-.wrapper .icon{
-  font-size: 100px;
-  color: #9658fe;
-}
-.wrapper .text{
-  font-size: 20px;
-  font-weight: 500;
-  color: #5B5B7B;
-}
-.wrapper #cancel-btn i{
-  position: absolute;
-  font-size: 20px;
-  right: 15px;
-  top: 15px;
-  color: #9658fe;
-  cursor: pointer;
-  display: none;
-}
-.wrapper.active:hover #cancel-btn i{
-  display: block;
-}
-.wrapper #cancel-btn i:hover{
-  color: #e74c3c;
-}
-.wrapper .file-name{
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  padding: 8px 0;
-  font-size: 18px;
-  color: #fff;
-  display: none;
-  background: linear-gradient(135deg,#3a8ffe 0%,#9658fe 100%);
-}
-.wrapper.active:hover .file-name{
-  display: block;
-}
-.container #custom-btn{
-  margin-top: 30px;
-  display: block;
-  width: 100%;
-  height: 50px;
-  border: none;
-  outline: none;
-  border-radius: 25px;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  cursor: pointer;
-  background: linear-gradient(135deg,#3a8ffe 0%,#9658fe 100%);
-}
- </style>
- <body>
- <head>
+<!-- Created By CodingNepal -->
+<html lang="en" dir="ltr">
+   <head>
       <meta charset="utf-8">
-      <title>Preview Image Before Upload</title>
+      <title>Preview Image Before Upload | CodingNepal</title>
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
- </head>   
-  <form2 aenctype="multipart/form-data">
+   </head>
+   <body>
+  <form action="trashdetection" method="post" enctype="multipart/form-data">
    {% csrf_token %} 
- <div class="container">
+  
+      <div class="container">
          <div class="wrapper">
             <div class="image">
                <img src="" alt="">
@@ -130,9 +31,9 @@ html,body{
                File name here
             </div>
          </div>
-        
-          <button onclick="defaultBtnActive()" id="custom-btn">Choose a file</button>
-          <input id="default-btn" type="file" hidden>
+         <label onclick="defaultBtnActive()" id="custom-btn">Choose a file</label>
+         <input id="default-btn" type="file" hidden>
+       <button  id="custom-btn">Upload</button>
       </div>
      
       <script>
@@ -167,14 +68,13 @@ html,body{
            }
          });
       </script>
-   <form1 action="trashdetection" method="post" enctype="multipart/form-data">
- <button type="submit" class="registerbtn">Submit</button>
-</form1>
-</form2>
+     
+
+     </form>
 <div>
         {% for message in messages %}
         <h3> {{message}} </h3>
         {% endfor %}
  </div>
-</body>
+   </body>
 </html>
