--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -1,80 +1,21 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <title>Preview Image Before Upload | CodingNepal</title>
-      <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-   </head>
-   <body>
-  <form action="trashdetection" method="post" enctype="multipart/form-data">
-   {% csrf_token %} 
-  
-      <div class="container">
-         <div class="wrapper">
-            <div class="image">
-               <img src="" alt="">
-            </div>
-            <div class="content">
-               <div class="icon">
-                  <i class="fas fa-cloud-upload-alt"></i>
-               </div>
-               <div class="text">
-                  No file chosen, yet!
-               </div>
-            </div>
-            <div id="cancel-btn">
-               <i class="fas fa-times"></i>
-            </div>
-            <div class="file-name">
-               File name here
-            </div>
-         </div>
-         <label onclick="defaultBtnActive()" id="custom-btn">Choose a file</label>
-         <input id="default-btn" type="file" hidden>
-       <button  id="custom-btn">Upload</button>
-      </div>
-     
-      <script>
-         const wrapper = document.querySelector(".wrapper");
-         const fileName = document.querySelector(".file-name");
-         const defaultBtn = document.querySelector("#default-btn");
-         const customBtn = document.querySelector("#custom-btn");
-         const cancelBtn = document.querySelector("#cancel-btn i");
-         const img = document.querySelector("img");
-         let regExp = /[0-9a-zA-Z\^\&\'\@\{\}\[\]\,\$\=\!\-\#\(\)\.\%\+\~\_ ]+$/;
-         function defaultBtnActive(){
-           defaultBtn.click();
-         }
-         defaultBtn.addEventListener("change", function(){
-           const file = this.files[0];
-           if(file){
-             const reader = new FileReader();
-             reader.onload = function(){
-               const result = reader.result;
-               img.src = result;
-               wrapper.classList.add("active");
-             }
-             cancelBtn.addEventListener("click", function(){
-               img.src = "";
-               wrapper.classList.remove("active");
-             })
-             reader.readAsDataURL(file);
-           }
-           if(this.value){
-             let valueStore = this.value.match(regExp);
-             fileName.textContent = valueStore;
-           }
-         });
-      </script>
-     
+<html>
+<body>
 
-     </form>
-<div>
+
+<h1>Upload Image</h1>
+
+<form action="trashdetection" method="post" enctype="multipart/form-data">
+   {% csrf_token %} 
+  <label for="img">Select image:</label>
+  <input type="file" id="img" name="img" accept="image/*">
+  <button type="submit">Upload</button>
+</form>
+
+ <div>
         {% for message in messages %}
         <h3> {{message}} </h3>
         {% endfor %}
  </div>
-   </body>
-</html>
+
+</body>
