--- a/templates/trashdetection.html
+++ b/templates/trashdetection.html
@@ -133,7 +133,7 @@ html,body{
             </div>
          </div>
          <label onclick="defaultBtnActive()" id="custom-btn">Choose a file</label>
-         <input id="default-btn" type="file" hidden>
+         <input id="default-btn" type="file" name="img" hidden>
        <button  id="custom-btn">Upload</button>
       </div>
      
