--- a/templates/index.html
+++ b/templates/index.html
@@ -25,18 +25,19 @@
   <h2 fontstyle="Sans" class="w3-left w3-tag w3-green w3-round">GREEN AND CLEAN<img width="100" height="100" src="https://cdn.glitch.global/a380af09-cbfb-42a4-bfda-6cffa4db648b/1643187802148.png?v=1643187868342" class="center"></h1>
   <h2 class="w3-left w3-tag w3-pale-red w3-round"></h2>
  
-										<a href="/" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Home</a>
-									        <a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>
+										<!--<a href="/" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Home</a>
+									        <a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>-->
                                                                                 {% if user.is_authenticated %} 
                                                                                 <a class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Hello, {{user.first_name}}</a>
-                                                                                <a href="accounts/logout" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Logout</a>
-					                                        <a href="accounts/trashdetection" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Pinpoint</a>
+                                                                                 <a href="accounts/trashdetection" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Pinpoint</a>
+	                                                                         <a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>
+                                                                                  <a href="accounts/logout" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Logout</a>
                                                                                 {% else %}
 
 
                                                                                 <a href="accounts/register" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Register</a>
                                                                                 <a href="accounts/login" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Login</a>
-																			
+										<a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>									
                                                                                 {% endif %}
                                                                                  
 
