--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                                                                                  <a href="accounts/logout" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Logout</a>
                                                                                  <a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>
                                                                                   <a href="accounts/trashdetection" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Pinpoint</a>
-                                                                                <a class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Hello, {{user.first_name}}</a>
+                                                                                <a href="https://aboutpurifynature.glitch.me" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Hello, {{user.first_name}}</a>
                                                                                  
 	                                                                         
                                                                                   
@@ -40,7 +40,7 @@
                                                                                  <a href="accounts/login" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Login</a>
                                                                                 <a href="accounts/register" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Register</a>
 										<a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>	
-								                 <a href="https://abouttheteam.glitch.me" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">About</a>
+								                 <a href="https://aboutpurifynature.glitch.me" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">About</a>
                                                                                 {% endif %}
                                                                                  
 
