--- a/templates/map.html
+++ b/templates/map.html
@@ -73,6 +73,6 @@ function initMap(lat, lng) {
 }
 </style>
 </head>
-<button onClick="window.location.href='https://purifynature.herokuapp.com';" id="myBttn" title="About" target="_blank">👋</button>
+<button onClick="window.location.href='https://purifynature.herokuapp.com';" id="myBttn" title="Back to the homepage" target="_blank">👋</button>
 
 </html>
