--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@ function topFunction() {
 }
 </style>
 </head>
-<button onClick="window.location.href='https://abouttheteam.glitch.me';" id="myBttn" title="About" target="_blank">👋</button>
+<button onClick="window.location.href='https://abouttheteam.glitch.me';" id="myBttn" title="About the team" target="_blank">👋</button>
 
 
 
