--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 <!-- Navigation bar with links -->
 <div class="w3-bar w3-white w3-text-black">
-  <h2 fontstyle="Sans" class="w3-left w3-tag w3-green w3-round">GREEN AND CLEAN<img width="100" height="100" src="https://cdn.glitch.global/a380af09-cbfb-42a4-bfda-6cffa4db648b/1643187802148.png?v=1643187868342" class="center"></h1>
+  <img width="100" height="100" src="https://cdn.glitch.global/a380af09-cbfb-42a4-bfda-6cffa4db648b/1643187802148.png?v=1643187868342" class="center"><h2 fontstyle="Sans" class="w3-left w3-tag w3-green w3-round">PurifyNature</h1>
   <h2 class="w3-left w3-tag w3-pale-red w3-round"></h2>
  
 										<!--<a href="/" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Home</a>
@@ -63,7 +63,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <img class="w3-image" src="https://media.istockphoto.com/photos/group-of-people-cleaning-nature-picture-id1143445679?k=20&m=1143445679&s=170667a&w=0&h=dL_rM-xH2MHCrufzfjhZgxlqLaBC1EBifw3-nIvjv-Q=" alt="Photo by Jamie Street" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
      
-      <h1 fontstyle="" class="w3-left w3-tag w3-pale-green w3-round">PurifyNature</h1>
+      <h1 fontstyle="" class="w3-left w3-tag w3-pale-green w3-round">Stay Green & Clean!</h1>
     </div>
   </header>
 
