--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,8 @@
 
 <!-- Navigation bar with links -->
 <div class="w3-bar w3-white w3-text-black">
-  <h2 fontstyle="Sans" class="w3-left w3-tag w3-green w3-round">PurifyNature<img width="80" height="80" src="https://cdn.glitch.global/a380af09-cbfb-42a4-bfda-6cffa4db648b/1643187802148.png?v=1643187868342" class="center"></h1>
+  <!--<h2 fontstyle="Sans" class="w3-left w3-tag w3-green w3-round">PurifyNature<img width="80" height="80" src="https://cdn.glitch.global/a380af09-cbfb-42a4-bfda-6cffa4db648b/1643187802148.png?v=1643187868342" class="center"></h1>-->
+  <div class="logo"><a href="/"><img width="60" height="60" src="https://cdn.glitch.me/12c95ed7-1d16-472b-bc84-306aba12e8f3%2Fgiphy.gif?v=1635701621849">PurifyNature</a></div>	
   <h2 class="w3-left w3-tag w3-pale-red w3-round"></h2>
  
 										<!--<a href="/" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Home</a>
